# random-fact-daily

./: Dockerfile.dev  Dockerfile.prod  README.md  docker-compose.dev.yaml  docker-compose.prod.yaml  manage.py  pyproject.toml
accounts/: admin.py  models.py  urls.py
accounts/migrations/: 0001_initial.py
accounts/templates/registration/: login.html
common/: admin.py  context_processors.py  models.py  urls.py  views.py
common/migrations/: 0001_initial.py  0002_remove_sitesettings_site_parameter.py
common/templates/common/: _empty.html  _main.html  index.html
common/templates/common/base/: footer.html  head.html  header.html  theme_toggle.html
facts/: admin.py  models.py  urls.py  views.py
facts/management/commands/: scrape_facts.py
facts/migrations/: 0001_initial.py  0002_fact_identifier.py
facts/scraping/: scraper.py  types.py
facts/scraping/extractors/: __init__.py  base.py  hoorayheroes_fun_facts.py  sciencefocus_121_facts.py  today_interesting_facts_adults.py
facts/scraping/formatters/: __init__.py  base.py  default.py  hoorayheroes.py
facts/scraping/storage/: __init__.py  base.py  db.py
facts/templates/facts/: random_fact.html
randomfactdaily/: asgi.py  settings.py  urls.py  wsgi.py
