[project]
name = "random-fact-daily"
version = "0.1.0"
description = ""
authors = [
    {name = "javierlnmn",email = "jlm03123@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0.0"
dependencies = [
    "asgiref (==3.8.1)",
    "django (==5.0.6)",
    "django-4-jet (==1.0.9)",
    "django-browser-reload (==1.13.0)",
    "django-tailwind (==3.8.0)",
    "python-dotenv (==1.0.1)",
    "python-slugify (==8.0.4)",
    "six (==1.16.0)",
    "sqlparse (==0.5.1)",
    "text-unidecode (==1.3)",
    "tzdata (==2024.2)",
    "ruff (>=0.14.10,<0.15.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "requests (>=2.32.5,<3.0.0)",
    "selenium (>=4.25.0,<5.0.0)",
    "whitenoise (>=6.11.0,<7.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.isort]
combine-as-imports = true
force-single-line = false